fixed z-index on editor swticher tabs

--- a/app/stylesheets/editors.sass
+++ b/app/stylesheets/editors.sass
@@ -45,6 +45,7 @@
     line-height: 40px
     padding-right: 10px
     text-align: right
+    z-index: 10
 
     a
       display: inline-block
